<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/giulioBlack"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/patientAct_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:gravity="center_horizontal"
        android:text="@string/patient_title"
        android:textColor="@color/giulioBlue"
        android:textSize="30sp"
        android:clickable="false" />
    
        <TextView
        android:id="@+id/patientAct_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:gravity="center_horizontal"
        android:text="@string/ready"
        android:textColor="@color/giulioBlue"
        android:textSize="30sp" 
        android:clickable="false"
		android:visibility="invisible"
        />
        
        
    <giu.fbalance.SessionMonitorEditText
        android:id="@+id/patientAct_name_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/patientAct_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:background="@drawable/rounded_corners_transp"
        android:clickable="true"
        android:ellipsize="start"
        android:gravity="center"
        android:hint="@string/name"
        android:inputType="textCapSentences"
        android:minEms="7"
        android:padding="10sp"
        android:textColor="@color/giulioBlue"
        android:textSize="25sp" />

    <giu.fbalance.SessionMonitorEditText
        android:id="@+id/patientAct_weight_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/patientAct_name_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15sp"
        android:background="@drawable/rounded_corners_transp"
        android:clickable="true"
        android:ellipsize="start"
        android:gravity="center"
        android:hint="@string/weight"
        android:inputType="numberDecimal"
        android:minEms="7"
        android:padding="10sp"
        android:textColor="@color/giulioBlue"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/patientAct_weigth_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/patientAct_weight_et"
        android:layout_marginLeft="10sp"
        android:layout_toRightOf="@+id/patientAct_weight_et"
        android:gravity="center_horizontal"
        android:text="[kg]"
        android:textColor="@color/giulioBlue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/patientAct_fast_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/patientAct_weight_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:gravity="center_horizontal"
        android:text="@string/fasting_since"
        android:textColor="@color/giulioBlue"
        android:textSize="20sp" />

    <TimePicker
        android:id="@+id/patientAct_fast_timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/patientAct_fast_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:background="@drawable/rounded_corners_less_transp" />


    <TextView
        android:id="@+id/patient_beta_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:alpha="0.05"
        android:background="@color/purple"
        android:gravity="center"
        android:text="BETA"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold|italic" />

</RelativeLayout>